[gd_scene load_steps=11 format=2]

[ext_resource path="res://terrain/GrassTiles.tres" type="TileSet" id=1]
[ext_resource path="res://characters/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/person02.png" type="Texture" id=3]
[ext_resource path="res://assets/people02.png" type="Texture" id=4]
[ext_resource path="res://ui/StoryBox.tscn" type="PackedScene" id=5]
[ext_resource path="res://characters/NPC.gd" type="Script" id=6]
[ext_resource path="res://assets/skyBackground.jpg" type="Texture" id=7]
[ext_resource path="res://assets/Music/greenForest.ogg" type="AudioStream" id=8]
[ext_resource path="res://levels/Intro.gd" type="Script" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 22.0
height = 44.0

[node name="Intro" type="Node2D"]
script = ExtResource( 9 )

[node name="skyBackground" type="Sprite" parent="."]
position = Vector2( 512, 256 )
texture = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65535, 12, 0, 0, 13, 0, 31, 11, 0, 32, 12, 0, 131071, 12, 0, 65536, 13, 0, 65567, 11, 0, 65568, 12, 0, 196607, 12, 0, 131072, 13, 0, 131103, 11, 0, 131104, 12, 0, 262143, 12, 0, 196608, 13, 0, 196639, 11, 0, 196640, 12, 0, 327679, 12, 0, 262144, 13, 0, 262175, 11, 0, 262176, 12, 0, 393215, 12, 0, 327680, 13, 0, 327700, 6, 0, 327711, 11, 0, 327712, 12, 0, 458751, 12, 0, 393216, 13, 0, 393247, 11, 0, 393248, 12, 0, 524287, 12, 0, 458752, 13, 0, 458783, 11, 0, 458784, 12, 0, 589823, 12, 0, 524288, 13, 0, 524309, 27, 0, 524319, 11, 0, 524320, 12, 0, 655359, 12, 0, 589824, 13, 0, 589855, 11, 0, 589856, 12, 0, 720895, 12, 0, 655360, 13, 0, 655391, 11, 0, 655392, 12, 0, 786431, 12, 0, 720896, 13, 0, 720908, 26, 0, 720927, 11, 0, 720928, 12, 0, 851967, 12, 0, 786432, 13, 0, 786433, 4, 0, 786434, 4, 0, 786435, 4, 0, 786436, 4, 0, 786437, 4, 0, 786438, 4, 0, 786439, 4, 0, 786440, 4, 0, 786441, 4, 0, 786442, 4, 0, 786443, 5, 0, 786444, 25, 0, 786450, 0, 0, 786451, 4, 0, 786452, 4, 0, 786453, 4, 0, 786454, 4, 0, 786455, 4, 0, 786456, 4, 0, 786457, 4, 0, 786458, 5, 0, 786459, 4, 0, 786460, 4, 0, 786461, 4, 0, 786462, 4, 0, 786463, 11, 0, 786464, 12, 0, 917503, 12, 0, 851968, 14, 0, 851969, 8, 0, 851970, 8, 0, 851971, 8, 0, 851972, 8, 0, 851973, 8, 0, 851974, 8, 0, 851975, 8, 0, 851976, 8, 0, 851977, 8, 0, 851978, 8, 0, 851979, 9, 0, 851980, 10, 0, 851981, 24, 0, 851982, 24, 0, 851983, 24, 0, 851984, 24, 0, 851985, 23, 0, 851986, 7, 0, 851987, 8, 0, 851988, 8, 0, 851989, 8, 0, 851990, 8, 0, 851991, 8, 0, 851992, 8, 0, 851993, 8, 0, 851994, 8, 0, 851995, 8, 0, 851996, 8, 0, 851997, 8, 0, 851998, 8, 0, 851999, 15, 0, 852000, 12, 0, 983039, 21, 0, 917504, 21, 0, 917505, 21, 0, 917506, 21, 0, 917507, 21, 0, 917508, 21, 0, 917509, 21, 0, 917510, 21, 0, 917511, 21, 0, 917512, 21, 0, 917513, 21, 0, 917514, 21, 0, 917515, 22, 0, 917522, 20, 0, 917523, 21, 0, 917524, 21, 0, 917525, 21, 0, 917526, 21, 0, 917527, 21, 0, 917528, 21, 0, 917529, 21, 0, 917530, 21, 0, 917531, 21, 0, 917532, 21, 0, 917533, 21, 0, 917534, 21, 0, 917535, 21, 0, 917536, 21, 0, 1048575, 1, 0, 983040, 1, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 1, 0, 983067, 1, 0, 983068, 1, 0, 983069, 1, 0, 983070, 1, 0, 983071, 1, 0, 983072, 3, 0, 1114111, 16, 0, 1048576, 16, 0, 1048577, 16, 0, 1048578, 16, 0, 1048579, 16, 0, 1048580, 16, 0, 1048581, 16, 0, 1048582, 16, 0, 1048583, 16, 0, 1048584, 16, 0, 1048585, 16, 0, 1048586, 16, 0, 1048587, 16, 0, 1048588, 16, 0, 1048589, 16, 0, 1048590, 16, 0, 1048591, 16, 0, 1048592, 16, 0, 1048593, 16, 0, 1048594, 16, 0, 1048595, 16, 0, 1048596, 16, 0, 1048597, 16, 0, 1048598, 16, 0, 1048599, 16, 0, 1048600, 16, 0, 1048601, 16, 0, 1048602, 16, 0, 1048603, 16, 0, 1048604, 16, 0, 1048605, 16, 0, 1048606, 16, 0, 1048607, 16, 0, 1048608, 16, 0, 1179647, 19, 0, 1114112, 19, 0, 1114113, 19, 0, 1114114, 19, 0, 1114115, 19, 0, 1114116, 19, 0, 1114117, 19, 0, 1114118, 19, 0, 1114119, 19, 0, 1114120, 19, 0, 1114121, 19, 0, 1114122, 19, 0, 1114123, 19, 0, 1114124, 19, 0, 1114125, 19, 0, 1114126, 19, 0, 1114127, 19, 0, 1114128, 19, 0, 1114129, 19, 0, 1114130, 19, 0, 1114131, 19, 0, 1114132, 19, 0, 1114133, 19, 0, 1114134, 19, 0, 1114135, 19, 0, 1114136, 19, 0, 1114137, 19, 0, 1114138, 19, 0, 1114139, 19, 0, 1114140, 19, 0, 1114141, 19, 0, 1114142, 19, 0, 1114143, 19, 0, 1114144, 19, 0, 1245183, 19, 0, 1179648, 19, 0, 1179649, 19, 0, 1179650, 19, 0, 1179651, 19, 0, 1179652, 19, 0, 1179653, 19, 0, 1179654, 19, 0, 1179655, 19, 0, 1179656, 19, 0, 1179657, 19, 0, 1179658, 19, 0, 1179659, 19, 0, 1179660, 19, 0, 1179661, 19, 0, 1179662, 19, 0, 1179663, 19, 0, 1179664, 19, 0, 1179665, 19, 0, 1179666, 19, 0, 1179667, 19, 0, 1179668, 19, 0, 1179669, 19, 0, 1179670, 19, 0, 1179671, 19, 0, 1179672, 19, 0, 1179673, 19, 0, 1179674, 19, 0, 1179675, 19, 0, 1179676, 19, 0, 1179677, 19, 0, 1179678, 19, 0, 1179679, 19, 0, 1179680, 19, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 192, 384 )

[node name="NPC" type="Area2D" parent="."]
position = Vector2( 801, 384 )
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="NPC"]
position = Vector2( 0, -16 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC"]
visible = false
position = Vector2( -16, -16 )
shape = SubResource( 1 )

[node name="StoryBox" parent="NPC" instance=ExtResource( 5 )]
visible = false
margin_left = -672.0
margin_top = -352.0
margin_right = 96.0
margin_bottom = -96.0
skip_to_scene = "res://levels/Level1.tscn"
story_line_file = "res://storyScripts/introScript.txt"
person = ExtResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true
max_distance = 1e+08
attenuation = 0.0
[connection signal="no_shooting" from="." to="Player" method="_on_no_shooting"]
[connection signal="StoryBoxActive" from="NPC" to="Player" method="_on_StoryBoxActive"]
[connection signal="StoryBoxInactive" from="NPC" to="Player" method="_on_StoryBoxInactive"]
[connection signal="body_shape_exited" from="NPC" to="NPC" method="_on_NPC_body_shape_exited"]
[connection signal="body_shape_exited" from="NPC" to="Player" method="_on_NPC_body_shape_exited"]
